<resources>
    <string name="s_app_name">Converter Lab</string>
    <string name="s_search">Поиск</string>

    <string name="s_phone">"Телефон : "</string>
    <string name="s_address">"Адрес : "</string>

    <string name="s_capital">Киев</string>
    <string name="s_capital_region">Киевская область</string>

    <string name="s_go_to_link">Перейти по ссылке</string>
    <string name="s_show_on_map">Показать на карте</string>
    <string name="s_call_phone">Позвонить по номеру</string>
    <string name="s_share_picture">Поделиться картинкой</string>

    <string name="necessary_program">У вас нет нужной программы.</string>
    <string name="choose_program">Выберите программу:</string>

    <string name="s_updating">Сервис обновляет данные.\nПовторите попытку через несколько секунд.</string>
    <string name="s_fist_run_internet">Приложению требуется подключение к интернету для первого запуска.</string>
    <string name="s_fist_run_server">Не удалось загрузить данные с сервера.\nПовторите попытку позже.</string>

    <string name="s_state">По состоянию на :</string>
    <string name="s_currency_name">Название валюты</string>
    <string name="s_purchase">Покупка</string>
    <string name="s_sale">Продажа</string>
    <string name="s_share">SHARE</string>
</resources>
