<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="bank"
            type="mitso.v.homework_20.api.models.Bank" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/c_view_bg">

        <RelativeLayout
            android:id="@+id/rl_Details_AD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/c_view_bg"
            android:orientation="vertical"
            android:padding="@dimen/d_size_17dp">

            <LinearLayout
                android:id="@+id/ll_First_AD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:background="@color/c_shadow"
                android:orientation="vertical"
                android:paddingBottom="2dp"
                android:paddingRight="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/c_text_bg"
                    android:orientation="vertical"
                    android:padding="17dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:text="@{bank.name}"
                        android:textColor="@color/c_title_pink"
                        android:textSize="23sp"
                        tools:text="Альфа Банк" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@{bank.region}"
                        android:textColor="@color/c_text"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:text="Zakarpatska oblast" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@{bank.city}"
                        android:textColor="@color/c_text"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:text="Uzhgorod" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/s_address"
                            android:textColor="@color/c_text"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{bank.address}"
                            android:textColor="@color/c_text"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            tools:text="Ceholnyanska, 8 " />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/s_phone"
                            android:textColor="@color/c_text"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{bank.phone}"
                            android:textColor="@color/c_text"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            tools:text="+380505005050" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_Second_AM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_First_AD"
                android:layout_marginBottom="7dp"
                android:background="@color/c_shadow"
                android:orientation="vertical"
                android:paddingBottom="2dp"
                android:paddingRight="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/c_text_bg"
                    android:orientation="vertical"
                    android:paddingBottom="7dp"
                    android:paddingLeft="@dimen/d_size_17dp"
                    android:paddingRight="@dimen/d_size_17dp"
                    android:paddingTop="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/s_state"
                        android:textColor="@color/c_text"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/temp_id_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:text="@{bank.formattedDate}"
                        android:textColor="@color/c_text"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:text="Date" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/temp_id_1"
                        android:text="@{bank.formattedTime}"
                        android:textColor="@color/c_text"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:text="Time" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_Third_AM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_Second_AM"
                android:layout_marginBottom="7dp"
                android:background="@color/c_shadow"
                android:orientation="vertical"
                android:paddingBottom="2dp"
                android:paddingRight="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/c_text_bg"
                    android:orientation="vertical"
                    android:paddingBottom="7dp"
                    android:paddingLeft="@dimen/d_size_17dp"
                    android:paddingRight="@dimen/d_size_17dp"
                    android:paddingTop="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/s_currency_name"
                        android:textColor="@color/c_text"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/temp_id_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/s_purchase"
                        android:textColor="@color/c_text"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/temp_id_2"
                        android:layout_alignRight="@+id/temp_id_2"
                        android:layout_below="@+id/temp_id_2"
                        android:text="@string/s_sale"
                        android:textColor="@color/c_text"
                        android:textSize="15sp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_Fourth_AM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_Third_AM"
                android:background="@color/c_shadow"
                android:orientation="vertical"
                android:paddingBottom="2dp"
                android:paddingRight="2dp">

                <LinearLayout
                    android:id="@+id/ll_Currencies_AD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/c_text_bg"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/d_size_17dp"
                    android:paddingRight="@dimen/d_size_17dp">

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</layout>